--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,26 +1,31 @@
-.container{
-    margin: 0 auto;
-    width: 80%;
-    text-align: center;
-    direction: rtl;
+.container {
+  margin: 0 auto;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  text-align: center;
+  direction: rtl;
 }
 
-#introduce{
-    display: block;
-    width: 100%;
-    font-size: 35px;
-    font-weight: bold;
-    color: white;
-    padding-bottom: 5px;
-    background-color: #4CAF50;
-    text-decoration: none;
-    margin-bottom: 15px;
+#introduce {
+  display: block;
+  width: 100%;
+  font-size: 35px;
+  font-weight: bold;
+  color: white;
+  padding-bottom: 5px;
+  background-color: #4CAF50;
+  text-decoration: none;
+  margin-bottom: 15px;
 }
 
-
-/* Page Style */
-
-@font-face{font-family:Shabnam;src: url(../font/Shabnam.ttf) format("truetype");font-weight:400}
+@font-face {
+  font-family: Shabnam;
+  src: url(../font/Shabnam.ttf) format("truetype");
+  font-weight: 400;
+}
 
 body {
   background-color: lightgray;
@@ -28,24 +33,27 @@ body {
   margin: 0;
 }
 
-.dynamic-element{
-	display: none;
+.dynamic-element {
+  display: none;
 }
 
-.active-element{
-	display: block;
+.active-element {
+  display: block;
 }
 
-.calendar-wrapper{
-	text-align: left;
-	direction: ltr;
-	float: right;
+.calendar-wrapper {
+  text-align: left;
+  direction: ltr;
+  display: flex;
+  position: relative;
+  margin: 0 auto;
+  width: 900px;
 }
 
-.clearfix, .clearfix::before, .clearfix::after{
-	clear: both;
-	content: "";
-	display:black;
+.clearfix, .clearfix::before, .clearfix::after {
+  clear: both;
+  content: "";
+  display: block;
 }
 
 .calendar-base {
@@ -59,34 +67,34 @@ body {
   overflow: hidden;
 }
 
-.active-season{
-	background-color: #d3cccc !important;
-	color:white !important;
+.active-season {
+  background-color: #d3cccc !important;
+  color: white !important;
 }
 
-.active-season-bg{
-	background-color: #d3cccc !important;
+.active-season-bg {
+  background-color: #d3cccc !important;
 }
 
-.active-season-cr{
-	color: #d3cccc !important;
+.active-season-cr {
+  color: #d3cccc !important;
 }
 
-.month-hover.active-season-cr{
-	font-weight: bold;
+.month-hover.active-season-cr {
+  font-weight: bold;
 }
 
-.holiday{
-	background-color: #f44336;
-	color:#fff !important;
+.holiday {
+  background-color: #f44336;
+  color: #fff !important;
 }
 
-.holiday:hover{
-	background-color: #d3cccc !important;
+.holiday:hover {
+  background-color: #d3cccc !important;
 }
 
-.disable-one{
-	opacity: 0.3;
+.disable-one {
+  opacity: 0.3;
 }
 
 .year {
@@ -99,47 +107,48 @@ body {
   font-weight: bold;
 }
 
-.year-meta{
-	position: absolute;
-	left: 335px;
-	top: 25px;
-	color: #d3cccc;
+.year-meta {
+  position: absolute;
+  left: 335px;
+  top: 25px;
+  color: #d3cccc;
 }
 
-.triangle-left {
-  width: 0;
-  height: 0;
-  border-top: 5px solid transparent;
-  border-right: 10px solid #E8E8E8;
-  border-bottom: 5px solid transparent;
-  float: right;
-  position: relative;
-  right: 90px;
-  top: 36px;
-}
-
+.triangle-left,
 .triangle-right {
   width: 0;
   height: 0;
   border-top: 5px solid transparent;
-  border-left: 10px solid #E8E8E8;
   border-bottom: 5px solid transparent;
-  float: right;
   position: relative;
-  left: 20px;
   top: 36px;
 }
-.triangle-left:hover{
-  border-right: 10px solid#2ECC71;
+
+.triangle-left {
+  border-right: 10px solid #E8E8E8;
+  float: right;
+  right: 90px;
 }
-.triangle-right:hover{
-  border-left: 10px solid#2ECC71;
+
+.triangle-right {
+  border-left: 10px solid #E8E8E8;
+  float: right;
+  left: 20px;
+}
+
+.triangle-left:hover {
+  border-right: 10px solid #2ECC71;
+}
+
+.triangle-right:hover {
+  border-left: 10px solid #2ECC71;
 }
 
 .month-color {
   color: #27AE60;
 }
-.month-hover:hover{
+
+.month-hover:hover {
   cursor: pointer;
   color: #d3cccc !important;
 }
@@ -170,11 +179,11 @@ body {
   font-weight: 600;
 }
 
-.days ul{
-	margin: 0;
+.days ul {
+  margin: 0;
 }
 
-.days ul li{
+.days ul li {
   background-color: transparent !important;
   height: auto !important;
   word-spacing: -4px;
@@ -182,55 +191,56 @@ body {
 }
 
 .num-dates {
-   float: right;
-   position: relative;
-   top: 90px;
-   right: 44px;
-   z-index: 1;
+  float: right;
+  position: relative;
+  top: 90px;
+  right: 44px;
+  z-index: 1;
 }
 
-.num-dates ul{
-	margin: 0 0 20px 0;
-	padding: 0;
+.num-dates ul {
+  margin: 0 0 20px 0;
+  padding: 0;
 }
 
-.num-dates ul li, .days ul li{
-	float: right;
-    list-style: none;
-    text-align: center;
-    margin-left: 11px;
-    width: 64px;
-	font-weight: bold;
+.num-dates ul li,
+.days ul li {
+  float: right;
+  list-style: none;
+  text-align: center;
+  margin-left: 11px;
+  width: 64px;
+  font-weight: bold;
 }
 
-.num-dates ul li{
-	padding: 10px 0;
-	cursor: pointer;
-	font-size: 22px;
-	border-radius: 9px;
-	position: relative;
-	box-shadow: 0 0 35px #e5e3e3;
-	color: #6b6b6b;
+.num-dates ul li {
+  padding: 10px 0;
+  cursor: pointer;
+  font-size: 22px;
+  border-radius: 9px;
+  position: relative;
+  box-shadow: 0 0 35px #e5e3e3;
+  color: #6b6b6b;
 }
 
-.num-dates ul li:hover{
-	background-color: #d3cccc;
-	color: white;
+.num-dates ul li:hover {
+  background-color: #d3cccc;
+  color: white;
 }
 
-.num-dates ul li small{
-	position: absolute;
-	font-size: 12px;
-    font-weight: normal;
-	bottom: 2px;
+.num-dates ul li small {
+  position: absolute;
+  font-size: 12px;
+  font-weight: normal;
+  bottom: 2px;
 }
 
-.num-dates ul li small#miladi{
-    right: 7px;
+.num-dates ul li small#miladi {
+  right: 7px;
 }
 
-.num-dates ul li small#ghamari{
-    left: 7px;
+.num-dates ul li small#ghamari {
+  left: 7px;
 }
 
 .active-day {
@@ -270,11 +280,12 @@ body {
 .calendar-left {
   width: 300px;
   height: 570px;
-  border-radius: 20px 0px 0px 20px;
+  border-radius: 20px 0 0 20px;
   background-color: #2ECC71;
-  position: relative;
+  position: absolute;
   z-index: 1;
-  bottom: 570px;
+  left: 0;
+  top: 0;
   color: white;
 }
 
@@ -284,16 +295,17 @@ body {
   left: 25px;
 }
 
-.burger-line:hover, .hamburger:hover{
-  background-color:#27e879 !important;
-}
-
 .burger-line {
   width: 25px;
   height: 3px;
   background-color: white;
   border-radius: 15%;
   margin-bottom: 3px;
+}
+
+.burger-line:hover,
+.hamburger:hover {
+  background-color: #27e879 !important;
 }
 
 .num-date {
@@ -307,7 +319,7 @@ body {
 
 .day {
   width: 50%;
-  margin: 0px auto;
+  margin: 0 auto;
   font-size: 30px;
   position: relative;
   bottom: 77px;
@@ -324,32 +336,114 @@ body {
 .posts {
   text-decoration: underline dotted;
 }
-.posts:hover{
-  color:#27e879 !important;
+
+.posts:hover {
+  color: #27e879 !important;
 }
 
-.events-list{
-	direction: rtl;
-	float: right;
-	position: relative;
-    top: -83px;
-    width: 93%;
-	height: 377px;
-    overflow-y: scroll;
-    padding-right: 8px;
-    text-align: right;
+.events-list {
+  direction: rtl;
+  float: right;
+  position: relative;
+  top: -83px;
+  width: 93%;
+  height: 377px;
+  overflow-y: scroll;
+  padding-right: 8px;
+  text-align: right;
 }
 
-.events-list li{
-	margin-bottom: 6px;
-	font-size: 14px;
+.events-list li {
+  margin-bottom: 6px;
+  font-size: 14px;
 }
 
-.events-list li span.event-day{
-	font-weight: bold;
+.events-list li span.event-day {
+  font-weight: bold;
 }
 
-.events-list li div.event-title{
-	display: inline-block;
-	margin-left: 3px;
+.events-list li div.event-title {
+  display: inline-block;
+  margin-left: 3px;
+}
+
+@media (max-width: 992px) {
+  .calendar-wrapper {
+    width: 700px;
+  }
+
+  .calendar-base {
+    width: 700px;
+  }
+
+  .months {
+    left: 260px;
+  }
+
+  .month-line {
+    left: 138px;
+  }
+}
+
+@media (max-width: 768px) {
+  .calendar-wrapper {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .calendar-base {
+    width: 100%;
+    height: auto;
+    min-height: 570px;
+    border-radius: 20px 20px 0 0;
+  }
+
+  .calendar-left {
+    width: 100%;
+    position: relative;
+    border-radius: 0 0 20px 20px;
+    height: auto;
+    min-height: 300px;
+    top: auto;
+    left: auto;
+  }
+
+  .months {
+    left: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .month-hover {
+    margin: 0 5px;
+  }
+
+  .month-line {
+    width: 90%;
+    left: 5%;
+  }
+
+  .days {
+    left: 0;
+    word-spacing: normal;
+  }
+
+  .days ul {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+  }
+
+  .num-dates {
+    right: 0;
+    width: 100%;
+  }
+
+  .num-dates ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
